# test-vcpkg-dcmtk

./: CMakeLists.txt  CMakePresets.json  README.md  foo.cxx  vcpkg.json
.github/workflows/: ci.yaml
